@@ -1,3 +1,7 @@
+2011-12-31  Ulrich Mueller  <ulm@gentoo.org>
+
+	* keyword-generation.sh: Set C locale for grep.	Reformat output.
+
 2011-12-30  Christian Faulhammer  <fauli@gentoo.org>
 
 	* ebuild-mode-keywords.el: All keywords are now from a
